maintain post excerpt punctuation consistency

--- a/_posts/2021-04-15-gtc.md
+++ b/_posts/2021-04-15-gtc.md
@@ -1,6 +1,6 @@
 ---
 title: "GTC 2021 Talk: parallel and distributed training of deep neural networks"
-excerpt: "Presented by Professor Assaf"
+excerpt: "Presented by Professor Assaf."
 categories:
 tags: Machine-Learning
 ---
